--- a/doc/doxygen.cfg.in
+++ b/doc/doxygen.cfg.in
@@ -1882,7 +1882,7 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             = M_DOXYGEN_DONT_EXTRACT
+PREDEFINED             = CFG_DOXYGEN_DONT_EXTRACT
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
