--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -2,7 +2,7 @@ configurations {
 	UserPlatformToolset {
 		// Needed because autopackage lacks VS2015+ support
 		key = "PlatformToolset";
-		choices: "v140,v141,v142";
+		choices: "v140,v141,v142,v143";
 	};
 
 	RuntimeLibrary {
@@ -26,7 +26,7 @@ nuget{
 
 		description: @"Intrusive C++ GUI library";
 		releaseNotes: "Initial release";
-		copyright: Copyright 2016 Ivan Gagis;
+		copyright: Copyright 2016-2024 Ivan Gagis;
 		tags: { native};
 	}
 	dependencies {
@@ -96,7 +96,7 @@ nuget{
 			lib: ..\msvs_solution\x64\v142_Debug_MT\libruisapp.lib;
 		}
 */
-
+/*
 		[x86,v142,release,MultiThreadedDLL] {
 			lib: ..\msvs_solution\v142_Release_MD\libruisapp.lib;
 		}
@@ -108,6 +108,36 @@ nuget{
 		}
 		[x64,v142,debug,MultiThreadedDebugDLL] {
 			lib: ..\msvs_solution\x64\v142_Debug_MD\libruisapp.lib;
+		}
+*/
+
+		// ======== v143 ========
+/*
+		[x86,v143,release,MultiThreaded] {
+			lib: ..\msvs_solution\v143_Release_MT\libruisapp.lib;
+		}
+		[x86,v143,debug,MultiThreadedDebug] {
+			lib: ..\msvs_solution\v143_Debug_MT\libruisapp.lib;
+		}
+		[x64,v143,release,MultiThreaded] {
+			lib: ..\msvs_solution\x64\v143_Release_MT\libruisapp.lib;
+		}
+		[x64,v143,debug,MultiThreadedDebug] {
+			lib: ..\msvs_solution\x64\v143_Debug_MT\libruisapp.lib;
+		}
+*/
+
+		[x86,v143,release,MultiThreadedDLL] {
+			lib: ..\msvs_solution\v143_Release_MD\libruisapp.lib;
+		}
+		[x86,v143,debug,MultiThreadedDebugDLL] {
+			lib: ..\msvs_solution\v143_Debug_MD\libruisapp.lib;
+		}
+		[x64,v143,release,MultiThreadedDLL] {
+			lib: ..\msvs_solution\x64\v143_Release_MD\libruisapp.lib;
+		}
+		[x64,v143,debug,MultiThreadedDebugDLL] {
+			lib: ..\msvs_solution\x64\v143_Debug_MD\libruisapp.lib;
 		}
 	}
 }
