--- a/homebrew/ruisapp.rb.in
+++ b/homebrew/ruisapp.rb.in
@@ -9,7 +9,7 @@ class Ruisapp < Formula
   depends_on "libutki"
   depends_on "libpapki"
   depends_on "libopros"
-  depends_on "libtreeml"
+  depends_on "libtml"
   depends_on "glew"
   depends_on "libr4"
   depends_on "libruis"
