--- a/msvs_solution/libruisapp/libruisapp.vcxproj
+++ b/msvs_solution/libruisapp/libruisapp.vcxproj
@@ -595,7 +595,7 @@
     <Import Project="..\packages\librasterimage.0.1.11\build\native\librasterimage.targets" Condition="Exists('..\packages\librasterimage.0.1.11\build\native\librasterimage.targets')" />
     <Import Project="..\packages\libsvgdom.0.4.11\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.4.11\build\native\libsvgdom.targets')" />
     <Import Project="..\packages\libsvgren.0.6.10\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.6.10\build\native\libsvgren.targets')" />
-    <Import Project="..\packages\libtreeml.0.2.13\build\native\libtreeml.targets" Condition="Exists('..\packages\libtreeml.0.2.13\build\native\libtreeml.targets')" />
+    <Import Project="..\packages\libtml.0.2.13\build\native\libtml.targets" Condition="Exists('..\packages\libtml.0.2.13\build\native\libtml.targets')" />
     <Import Project="..\packages\libruis.0.5.213\build\native\libruis.targets" Condition="Exists('..\packages\libruis.0.5.213\build\native\libruis.targets')" />
     <Import Project="..\packages\libruis-render-opengl.0.1.65\build\native\libruis-render-opengl.targets" Condition="Exists('..\packages\libruis-render-opengl.0.1.65\build\native\libruis-render-opengl.targets')" />
   </ImportGroup>
@@ -619,7 +619,7 @@
     <Error Condition="!Exists('..\packages\librasterimage.0.1.11\build\native\librasterimage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\librasterimage.0.1.11\build\native\librasterimage.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgdom.0.4.11\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.4.11\build\native\libsvgdom.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgren.0.6.10\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.6.10\build\native\libsvgren.targets'))" />
-    <Error Condition="!Exists('..\packages\libtreeml.0.2.13\build\native\libtreeml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libtreeml.0.2.13\build\native\libtreeml.targets'))" />
+    <Error Condition="!Exists('..\packages\libtml.0.2.13\build\native\libtml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libtml.0.2.13\build\native\libtml.targets'))" />
     <Error Condition="!Exists('..\packages\libruis.0.5.213\build\native\libruis.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libruis.0.5.213\build\native\libruis.targets'))" />
     <Error Condition="!Exists('..\packages\libruis-render-opengl.0.1.65\build\native\libruis-render-opengl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libruis-render-opengl.0.1.65\build\native\libruis-render-opengl.targets'))" />
   </Target>
