--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -8,7 +8,7 @@ target "ruisapp" do
 	pod 'utki', '>= 1.1.124'
 	pod 'papki', '>= 1.0.93'
 	pod 'r4', '>= 0.1.53'
-	pod 'treeml', '>= 0.1.28'
+	pod 'tml', '>= 0.1.28'
 	pod 'ruis', '>= 0.5.210'
 	pod 'ruis-render-opengles', '>= 0.1.50'
 end
