--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -13,6 +13,7 @@ ifeq ($(os),linux)
     this__cfg_suffix := $(if $(ogles2),opengles,opengl)-$(if $(wayland),wayland,x11)
     this_libruisapp := libruisapp-$(this__cfg_suffix)
 else
+    this__cfg_suffix := $(if $(ogles2),opengles,opengl)
     this_libruisapp := libruisapp-opengl
 endif
 
