--- a/debian/control.in
+++ b/debian/control.in
@@ -19,7 +19,8 @@ Build-Depends:
 		libruis-render-opengles-dev (>= 0.1.50),
 		libegl1-mesa-dev,
 		libgles2-mesa-dev,
-		libgtk-3-dev
+		libgtk-3-dev,
+		libxkbcommon-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.9.5
 
