--- a/debian/control.in
+++ b/debian/control.in
@@ -20,6 +20,7 @@ Build-Depends:
 		libegl1-mesa-dev,
 		libgles2-mesa-dev,
 		libgtk-3-dev,
+		libwayland-dev,
 		libxkbcommon-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.9.5
