--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
       matrix:
         include:
           - {os: debian, codename: bookworm, image_owner: , package_type: deb}
-          - {os: debian, codename: bookworm, image_owner: arm32v7/, package_type: deb, labels: [arm32,docker]}
-          - {os: debian, codename: bookworm, image_owner: arm64v8/, package_type: deb, labels: [arm64,docker]}
+          - {os: debian, codename: bookworm, image_owner: , package_type: deb, labels: [arm32,docker]}
+          - {os: debian, codename: bookworm, image_owner: , package_type: deb, labels: [arm64,docker]}
     runs-on: ${{ (matrix.labels == '' && 'ubuntu-latest') || matrix.labels }}
     container: ${{ matrix.image_owner }}${{ matrix.os }}:${{ matrix.codename }}
-    name: sanitizer - ${{ matrix.image_owner }}${{ matrix.os }}:${{ matrix.codename }}
+    name: sanitizer - ${{ matrix.image_owner }}${{ matrix.os }}:${{ matrix.codename }} |  | ${{ matrix.labels[0] }}
     steps:
       - name: add cppfw deb repo
         uses: myci-actions/add-deb-repo@master
