--- a/src/makefile
+++ b/src/makefile
@@ -55,7 +55,10 @@ define ruisapp_rules
 
     this_name := ruisapp-$1$(if $2,-$2)
 
-    ifeq ($(os), linux)
+    ifeq ($2,sdl)
+        this_ldlibs += -lSDL2
+        this_cxxflags += -D RUISAPP_SDL
+    else ifeq ($(os), linux)
         # use -isystem instead of -I to prevent clang-tidy follow the includes from these locations
         this_cxxflags += $$(patsubst -I%,-isystem%,$$(shell pkg-config --cflags gdk-3.0))
         this_ldlibs += $$(shell pkg-config --libs gdk-3.0)
@@ -70,8 +73,9 @@ define ruisapp_rules
             this_ldlibs += -lxkbcommon
             this_cxxflags += -isystem $(dir $(wayland_shell_protocol_header))
             this_cxxflags += -D RUISAPP_WAYLAND
-        else
+        else ifeq ($2,xorg)
             this_ldlibs += -lX11
+        else
         endif
     else ifeq ($(os), windows)
         this_ldlibs += -lgdi32 -lopengl32 -lglew32
@@ -120,6 +124,8 @@ ifeq ($(os), linux)
     $(eval $(call ruisapp_rules,opengles,xorg))
     # $(eval $(call ruisapp_rules,opengl,wayland))
     $(eval $(call ruisapp_rules,opengles,wayland))
+    $(eval $(call ruisapp_rules,opengl,sdl))
+    $(eval $(call ruisapp_rules,opengles,sdl))
 else
     $(eval $(call ruisapp_rules,opengl,))
 endif
