--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -50,6 +50,13 @@
             "group": "build"
         },
         {
+            "label": "run-app-sdl-dbg",
+            "type": "shell",
+            "command": "make run-app config=dbg sdl=true",
+            "problemMatcher": [],
+            "group": "build"
+        },
+        {
             "label": "run-app-dbg-ogles2",
             "type": "shell",
             "command": "make run-app config=dbg ogles2=true",
